Recommit to change python script
Change in the total students used for adjusted scores. Old student total removed the nineth grade student pop. New includes them to reflect impact on total grades.

--- a/PySchool_Analysis.ipynb
+++ b/PySchool_Analysis.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "830beab2",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "19             89          80  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1dc4b22e",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b4c8a2b5",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c19f0d72",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "45daad03",
    "metadata": {},
    "outputs": [],
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c56fa501",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "195d527b",
    "metadata": {},
    "outputs": [],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ece162f6",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1285,7 @@
        "                      12th           96.153846          89.644970  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,13 +1329,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1c39c126",
    "metadata": {},
    "outputs": [],
    "source": [
     "# recalc Thomas High School grades 10-12 to remove effect of missing 9th grade scores\n",
-    "per_school_counts_adj = district_df_adj[\"school_name\"].value_counts()\n",
+    "per_school_counts_adj = district_df[\"school_name\"].value_counts()\n",
     "\n",
     "Average_read_score_per_school_adj = district_df_adj.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
     "Average_math_score_per_school_adj = district_df_adj.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "3e9721d4",
    "metadata": {},
    "outputs": [],
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e75239f4",
    "metadata": {},
    "outputs": [],
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "88bcb24b",
    "metadata": {},
    "outputs": [
@@ -1594,12 +1594,6 @@
        "      <td>582.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>90.630324</td>\n",
-       "      <td>638.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Griffin High School</td>\n",
        "      <td>90.599455</td>\n",
@@ -1634,6 +1628,12 @@
        "      <td>Holden High School</td>\n",
        "      <td>89.227166</td>\n",
        "      <td>581.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>65.076453</td>\n",
+       "      <td>638.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1684,13 +1684,13 @@
       "text/plain": [
        "                   School  %_Overall_Passing  Per_Student_Budget\n",
        "1     Cabrera High School          91.334769               582.0\n",
-       "12     Thomas High School          90.630324               638.0\n",
        "4     Griffin High School          90.599455               625.0\n",
        "13     Wilson High School          90.582567               578.0\n",
        "9        Pena High School          90.540541               609.0\n",
        "14     Wright High School          90.333333               583.0\n",
        "11    Shelton High School          89.892107               600.0\n",
        "6      Holden High School          89.227166               581.0\n",
+       "12     Thomas High School          65.076453               638.0\n",
        "0      Bailey High School          54.642283               628.0\n",
        "3        Ford High School          54.289887               644.0\n",
        "8     Johnson High School          53.539172               650.0\n",
@@ -1894,12 +1894,6 @@
        "      <td>1858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>90.630324</td>\n",
-       "      <td>1174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Griffin High School</td>\n",
        "      <td>90.599455</td>\n",
@@ -1934,6 +1928,12 @@
        "      <td>Holden High School</td>\n",
        "      <td>89.227166</td>\n",
        "      <td>427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>65.076453</td>\n",
+       "      <td>1635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -1984,13 +1984,13 @@
       "text/plain": [
        "                   School  %_Overall_Passing  Total_Students\n",
        "1     Cabrera High School          91.334769            1858\n",
-       "12     Thomas High School          90.630324            1174\n",
        "4     Griffin High School          90.599455            1468\n",
        "13     Wilson High School          90.582567            2283\n",
        "9        Pena High School          90.540541             962\n",
        "14     Wright High School          90.333333            1800\n",
        "11    Shelton High School          89.892107            1761\n",
        "6      Holden High School          89.227166             427\n",
+       "12     Thomas High School          65.076453            1635\n",
        "0      Bailey High School          54.642283            4976\n",
        "3        Ford High School          54.289887            2739\n",
        "8     Johnson High School          53.539172            4761\n",
@@ -2194,12 +2194,6 @@
        "      <td>Charter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>90.630324</td>\n",
-       "      <td>Charter</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Griffin High School</td>\n",
        "      <td>90.599455</td>\n",
@@ -2233,6 +2227,12 @@
        "      <th>6</th>\n",
        "      <td>Holden High School</td>\n",
        "      <td>89.227166</td>\n",
+       "      <td>Charter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>65.076453</td>\n",
        "      <td>Charter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2284,13 +2284,13 @@
       "text/plain": [
        "                   School  %_Overall_Passing School_Type\n",
        "1     Cabrera High School          91.334769     Charter\n",
-       "12     Thomas High School          90.630324     Charter\n",
        "4     Griffin High School          90.599455     Charter\n",
        "13     Wilson High School          90.582567     Charter\n",
        "9        Pena High School          90.540541     Charter\n",
        "14     Wright High School          90.333333     Charter\n",
        "11    Shelton High School          89.892107     Charter\n",
        "6      Holden High School          89.227166     Charter\n",
+       "12     Thomas High School          65.076453     Charter\n",
        "0      Bailey High School          54.642283    District\n",
        "3        Ford High School          54.289887    District\n",
        "8     Johnson High School          53.539172    District\n",
@@ -2416,11 +2416,6 @@
        "      <td>91.334769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Thomas High School</td>\n",
-       "      <td>90.630324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Griffin High School</td>\n",
        "      <td>90.599455</td>\n",
@@ -2435,6 +2430,11 @@
        "      <td>Pena High School</td>\n",
        "      <td>90.540541</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Wright High School</td>\n",
+       "      <td>90.333333</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2442,10 +2442,10 @@
       "text/plain": [
        "                 School  %_Overall_Passing\n",
        "1   Cabrera High School          91.334769\n",
-       "12   Thomas High School          90.630324\n",
        "4   Griffin High School          90.599455\n",
        "13   Wilson High School          90.582567\n",
-       "9      Pena High School          90.540541"
+       "9      Pena High School          90.540541\n",
+       "14   Wright High School          90.333333"
       ]
      },
      "metadata": {},
